--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240304.0",
+    "@cloudflare/workers-types": "^4.20251003.0",
+    "@types/node": "^24.6.2",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5",
+    "typescript": "^5.7.2",
     "wrangler": "^3.51.0"
   }
 }
