--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "go-module-proxy",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "format": "prettier --write src/**/*.ts",
-    "typecheck": "tsc --noEmit"
-  },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251003.0",
     "@types/node": "^24.6.2",
     "prettier": "^3.2.5",
     "typescript": "^5.7.2",
     "wrangler": "^3.51.0"
-  }
+  },
+  "name": "go-module-proxy",
+  "private": true,
+  "scripts": {
+    "deploy": "wrangler deploy",
+    "dev": "wrangler dev",
+    "format": "prettier --write src/**/*.ts",
+    "typecheck": "tsc --noEmit"
+  },
+  "type": "module",
+  "version": "0.1.0"
 }
