--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251003.0",
     "@types/node": "^24.6.2",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "prettier": "^3.2.5",
-    "typescript": "^5.7.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4",
     "wrangler": "^4.42.0"
   },
   "name": "go-module-proxy",
